Fixed several level connections towards the end of the mushroom boss area.

--- a/data/level/Forest/caustic-cauchemar.cfg
+++ b/data/level/Forest/caustic-cauchemar.cfg
@@ -6,10 +6,10 @@
 	"background_palette": "forest_dread",
 	"character": [
 		{
-			"_addr": "19A569D8",
+			"_uuid": "72ed133aa1e943bf8f33686784f75955",
 			"current_frame": "normal",
-			"custom": 1,
-			"is_human": 1,
+			"custom": true,
+			"is_human": true,
 			"label": "_3b58",
 			"objects_destroyed": {
 				"level": "mini-boss_swamp.cfg",
@@ -26,9 +26,9 @@
 			"y": -125
 		},
 		{
-			"_addr": "1CFCECD8",
+			"_uuid": "e967690b07694e03937af57682db8e6e",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_13e99a15",
 			"on_create": "if(level.player.get_stored_event('caustic_cauchemar_fight_won'), die())",
 			"on_process": "[
@@ -111,10 +111,10 @@
 			"y": -1056
 		},
 		{
-			"_addr": "1CFCF120",
+			"_uuid": "fdc4459296a54245b944e144dd9c60a8",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_6fa8",
 			"particles": "bubbles,fizz",
 			"property_data": {
@@ -128,37 +128,37 @@
 			"y": 256
 		},
 		{
-			"_addr": "1CFCF568",
+			"_uuid": "03a03d427db04bdfad13ba22ee70a551",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_78e7",
 			"type": "fungus_bracket_springy",
 			"x": -544,
 			"y": 64
 		},
 		{
-			"_addr": "1CFCF9B0",
+			"_uuid": "36b8cfe44d614dccacd3f8f0f8343c40",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_3c7b",
 			"type": "breakable_block_burnable",
 			"x": -672,
 			"y": -192
 		},
 		{
-			"_addr": "1CFCFDF8",
+			"_uuid": "3baa931d998f49c79519bcc4116fd75f",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_4a1a",
 			"type": "breakable_block_burnable",
 			"x": -672,
 			"y": -256
 		},
 		{
-			"_addr": "1CFD0240",
+			"_uuid": "9845d934bb92451a906652b8ed6054a4",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_59ff",
 			"property_data": {
 				"_x2_bound": 1079,
@@ -167,14 +167,14 @@
 				"_y_bound": -408
 			},
 			"type": "mushroom_jellyfish_spawner",
-			"upside_down": 1,
+			"upside_down": true,
 			"x": 415,
 			"y": 8
 		},
 		{
-			"_addr": "1CFD0688",
+			"_uuid": "99424bae50b44c84bc7b23708a3e3d47",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_6fdb",
 			"property_data": {
 				"_x2_bound": 444,
@@ -183,14 +183,14 @@
 				"_y_bound": -1520
 			},
 			"type": "mushroom_jellyfish_spawner",
-			"upside_down": 1,
+			"upside_down": true,
 			"x": -156,
 			"y": -594
 		},
 		{
-			"_addr": "1CFD0AD0",
+			"_uuid": "0e9369052df743b6a69ef43e5a376661",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_5239",
 			"property_data": {
 				"_x2_bound": 236,
@@ -199,50 +199,50 @@
 				"_y_bound": -1298
 			},
 			"type": "mushroom_jellyfish_spawner",
-			"upside_down": 1,
+			"upside_down": true,
 			"x": -244,
 			"y": -600
 		},
 		{
-			"_addr": "1CFD0F18",
+			"_uuid": "1bd8f5c2fe5b4fd4a248b8ebd5593984",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_22e8",
 			"type": "crumbling_bricks",
 			"x": 992,
 			"y": -1088
 		},
 		{
-			"_addr": "1CFD1360",
+			"_uuid": "185c48186fd04692bed2bfc1c72386cd",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_2fc4",
 			"type": "crumbling_bricks",
 			"x": 1024,
 			"y": -1088
 		},
 		{
-			"_addr": "1CFD17A8",
+			"_uuid": "8321caa1ce674613814cb489a2c2944a",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_b4f",
 			"type": "crumbling_bricks",
 			"x": 1440,
 			"y": -1088
 		},
 		{
-			"_addr": "1CFD1BF0",
+			"_uuid": "5eec1bacb4cd4bc491e32a21f683ccf1",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_3c1a",
 			"type": "crumbling_bricks",
 			"x": 1472,
 			"y": -1088
 		},
 		{
-			"_addr": "1CFD2038",
+			"_uuid": "9630327f49454f2c8e439284351f54fb",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_7315",
 			"particles": "bubbles,fizz",
 			"property_data": {
@@ -252,43 +252,43 @@
 				"_y_bound": -992
 			},
 			"type": "acid_controller",
-			"upside_down": 1,
+			"upside_down": true,
 			"x": 1248,
 			"y": -960
 		},
 		{
-			"_addr": "1CFD2480",
+			"_uuid": "501d6cbc23ec4087bd536d8117e8c1aa",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_7fb0c826",
 			"type": "mushroom_foreground2",
 			"x": -432,
 			"y": 170
 		},
 		{
-			"_addr": "1CFD28C8",
+			"_uuid": "c77336c7f3d44d0d88f80d87e6147cfa",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_46a059cf",
 			"type": "mushroom_foreground1",
 			"x": -140,
 			"y": 245
 		},
 		{
-			"_addr": "1CFD2D10",
+			"_uuid": "1ea9326d443a4a569593094fb80b9993",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_5869a163",
 			"type": "mushroom_foreground1",
 			"x": 429,
 			"y": 164
 		},
 		{
-			"_addr": "1CFD3158",
+			"_uuid": "9479803b361b45c7bc03a02d0916f606",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_337d8ca4",
 			"type": "mushroom_foreground3",
 			"x": 161,
@@ -296,66 +296,66 @@
 			"zsub_order": 1
 		},
 		{
-			"_addr": "1CFD35A0",
+			"_uuid": "916a807fdb30401fa66fe5fed034f835",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_5435f30",
 			"type": "mushroom_foreground3",
 			"x": -1309,
 			"y": -110
 		},
 		{
-			"_addr": "1CFD39E8",
+			"_uuid": "36aaaa0a70154f38aeceb9fe8a046e58",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_68a60a99",
 			"type": "mushroom_foreground1",
 			"x": -1050,
 			"y": -98
 		},
 		{
-			"_addr": "1CFD3E30",
+			"_uuid": "7862948e7e3443c688ecf8195c1710e9",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_74fdcb5a",
 			"type": "rock_foreground_forest3",
 			"x": -1555,
 			"y": -26
 		},
 		{
-			"_addr": "1CFD4278",
+			"_uuid": "039659bc883b4ba79363cddd7bcc8bbd",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_64086606",
 			"type": "mushroom_foreground1",
 			"x": -1990,
 			"y": -44
 		},
 		{
-			"_addr": "1CFD46C0",
+			"_uuid": "ed131333900f4e4ea0aa7a607b3908e2",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_5a381a79",
 			"type": "rock_column_background_forest5",
 			"x": -1378,
 			"y": -82
 		},
 		{
-			"_addr": "1CFD4B08",
+			"_uuid": "ba6f803c6ad246cabc2084dd7494d9c2",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_707216db",
 			"type": "mushroom_foreground1",
 			"x": 28,
 			"y": -1150
 		},
 		{
-			"_addr": "1CFD4F50",
+			"_uuid": "ee171f50a4a948a985176ce9aab263fd",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_70c46ab6",
 			"type": "mushroom_foreground2",
 			"x": 83,
@@ -363,225 +363,225 @@
 			"zsub_order": 1
 		},
 		{
-			"_addr": "1CFD5398",
+			"_uuid": "c9b34811681f4f46ab98d7f6245d5925",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_4705803f",
 			"type": "mushroom_foreground3",
 			"x": 450,
 			"y": -1150
 		},
 		{
-			"_addr": "1CFD57E0",
+			"_uuid": "e53526cb0b36457f9e2995982401fe1f",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_50580ea1",
 			"type": "mushroom_foreground1",
 			"x": 779,
 			"y": -1012
 		},
 		{
-			"_addr": "1CFD5C28",
+			"_uuid": "11281697c7d948eebd09372e7870a16b",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_545e4323",
 			"type": "mushroom_foreground2",
 			"x": 1021,
 			"y": -997
 		},
 		{
-			"_addr": "1CFD6070",
+			"_uuid": "4484423bd808488f88a2f51b02bf67a8",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_7e00e582",
 			"type": "mushroom_foreground3",
 			"x": 1553,
 			"y": -1077
 		},
 		{
-			"_addr": "1CFD64B8",
+			"_uuid": "e1cea42b8b074335a5993fcaec9d8964",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_731301af",
 			"type": "rock_background_cubic1",
 			"x": 641,
 			"y": -1150
 		},
 		{
-			"_addr": "1CFD6900",
+			"_uuid": "b0a5140bcb9f4118afa161b812a6f2d9",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_654f9270",
 			"type": "rock_background_cubic1",
 			"x": 1209,
 			"y": -958
 		},
 		{
-			"_addr": "1CFD6D48",
+			"_uuid": "0fcd4c09b54745f0bae12cd8341b4d0a",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_7ed86cc3",
 			"type": "rock_background_cubic1",
 			"x": 1112,
 			"y": -1516
 		},
 		{
-			"_addr": "1CFD7190",
+			"_uuid": "223d08757d1c46298639cb8b2f7180f8",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_6efdd7e7",
 			"type": "rock_background_cubic2",
 			"x": 1423,
 			"y": -1324
 		},
 		{
-			"_addr": "1CFD75D8",
+			"_uuid": "5194e86c96564514a289965d865ba3a2",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_4d8a5589",
 			"type": "rock_background_cubic3",
 			"x": 927,
 			"y": -1485
 		},
 		{
-			"_addr": "1CFD7A20",
+			"_uuid": "261cb9dca20640f1b57eac0a665f878c",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_2452f445",
 			"type": "rock_background_cubic4",
 			"x": 981,
 			"y": -1417
 		},
 		{
-			"_addr": "1CFD7E68",
+			"_uuid": "29bbe523f7b5430d9787a46666dab332",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_2a432792",
 			"type": "rock_background_cubic4",
 			"x": 1304,
 			"y": -1221
 		},
 		{
-			"_addr": "1CFD82B0",
+			"_uuid": "811c92c66a984fc8989aaa2a91348adc",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_7c3c8ab",
 			"type": "rock_background_cubic4",
 			"x": 75,
 			"y": -1118
 		},
 		{
-			"_addr": "1CFD86F8",
+			"_uuid": "8bd3617b6d004bdaa1d1b7b0f7611dc1",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_6ddb1212",
 			"type": "rock_background_cubic3",
 			"x": 320,
 			"y": -1139
 		},
 		{
-			"_addr": "1CFD8B40",
+			"_uuid": "ddd445807cca40c6ab84ee1d883996a2",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_8ae4675",
 			"type": "rock_background_cubic3",
 			"x": -230,
 			"y": -1316
 		},
 		{
-			"_addr": "1CFD8F88",
+			"_uuid": "11d25c91fbfc404ebeabe040e0c90dbe",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_466951af",
 			"type": "rock_background_cubic3",
 			"x": -74,
 			"y": -401
 		},
 		{
-			"_addr": "1CFD93D0",
+			"_uuid": "5ecb072e1dfa4f438882cc65792302e2",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_56e4bab8",
 			"type": "rock_background_cubic1",
 			"x": 3,
 			"y": -346
 		},
 		{
-			"_addr": "1CFD9818",
+			"_uuid": "438bfaced2264959b5557f17bfb5f6ba",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_69af82af",
 			"type": "rock_background_cubic1",
 			"x": 439,
 			"y": -228
 		},
 		{
-			"_addr": "1CFD9C60",
+			"_uuid": "694ec340aac04a85a907c8cc76a40c4e",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_11e167a4",
 			"type": "rock_background_cubic1",
 			"x": -20,
 			"y": -633
 		},
 		{
-			"_addr": "1CFDA0A8",
+			"_uuid": "91cd2264249d4049881ee305a20e0824",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_31f8770b",
 			"type": "rock_background_cubic1",
 			"x": -321,
 			"y": 106
 		},
 		{
-			"_addr": "1CFDA4F0",
+			"_uuid": "dc7027501b384c2588ea310bda63bac6",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_36503f9f",
 			"type": "rock_background_cubic3",
 			"x": -251,
 			"y": -145
 		},
 		{
-			"_addr": "1CFDA938",
+			"_uuid": "436d7b3cbb014ac6af78fda211c9acd8",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_3ad3b173",
 			"type": "rock_background_cubic3",
 			"x": 117,
 			"y": -14
 		},
 		{
-			"_addr": "1CFDAD80",
+			"_uuid": "24573ce403864aac93cd7842f547f519",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_43e485e9",
 			"type": "rock_background_cubic3",
 			"x": -516,
 			"y": -231
 		},
 		{
-			"_addr": "1CFDB1C8",
+			"_uuid": "98508fd82c174e74b193ea21dc9f4f62",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_40d47e89",
 			"type": "rock_background_cubic3",
 			"x": -853,
 			"y": -439
 		},
 		{
-			"_addr": "1CFDB610",
+			"_uuid": "b6c1a7a710374d788bf1f48f6a00d896",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_3083948e",
 			"type": "rock_background_cubic3",
 			"x": -1019,
 			"y": -128
 		},
 		{
-			"_addr": "1CFDBA58",
+			"_uuid": "b55526bcd0844e7cbfc2ca691a204932",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_65aae92e",
 			"type": "rock_background_cubic4",
 			"x": -739,
@@ -589,10 +589,10 @@
 			"zsub_order": 1
 		},
 		{
-			"_addr": "1CFDBEA0",
+			"_uuid": "c86958fd1ba641709a63f526c716f4f0",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "wearisome_wetlands_door",
 			"property_data": {
 				"_dest_door": "right_door",
@@ -603,41 +603,41 @@
 			"y": -128
 		},
 		{
-			"_addr": "1CFDC2E8",
+			"_uuid": "4c8c9a02057747798d89d7fad496f5e7",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_4c1d6317",
 			"type": "rock_background_cubic4",
 			"x": -1966,
 			"y": -81
 		},
 		{
-			"_addr": "1CFDC730",
+			"_uuid": "da042c347d014b859d842289ed67b4f9",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_458be3be",
 			"type": "mushroom_foreground1",
 			"x": -2453,
 			"y": -5
 		},
 		{
-			"_addr": "1CFDCB78",
+			"_uuid": "d89b0c1a95174b9a961d400cefaa19ec",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_762df36e",
 			"type": "rock_foreground_forest4",
 			"x": -2171,
 			"y": 39
 		},
 		{
-			"_addr": "1CFDCFC0",
+			"_uuid": "bcdc90886e13495cbf4bdfa1522e9fd1",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"draw_scale": 1700352,
-			"face_right": 0,
+			"face_right": false,
 			"label": "_13cd765c",
 			"type": "rock_foreground_forest3",
 			"x": -1803,
@@ -645,9 +645,9 @@
 			"zsub_order": 1
 		},
 		{
-			"_addr": "1CFDD408",
+			"_uuid": "2faab6db01e24eac9ac6a545205ab122",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "the_empty_place_door",
 			"property_data": {
 				"_dest_door": "caustic_cauchemar_door",
@@ -658,27 +658,27 @@
 			"y": -1536
 		},
 		{
-			"_addr": "1CFDD850",
+			"_uuid": "615e49e3a98f4c58ad36896a43e70b48",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_23331dca",
 			"type": "mushroom_foreground1",
 			"x": 2157,
 			"y": -1531
 		},
 		{
-			"_addr": "1CFDDC98",
+			"_uuid": "a4f52d52b93a4eaaaa327ab51c8b6cdf",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_f57dae2",
 			"type": "mushroom_foreground2",
 			"x": 1908,
 			"y": -1520
 		},
 		{
-			"_addr": "1CFDE0E0",
+			"_uuid": "d84e208b7e8146fa89fa7d8950b91690",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_56aa7404",
 			"type": "rock_background_cubic1",
 			"x": 1736,
@@ -695,7 +695,7 @@
 	"serialized_objects": {
 		"character": []
 	},
-	"set_screen_resolution_on_entry": 0,
+	"set_screen_resolution_on_entry": false,
 	"tile_map": [
 		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,nbr,nbr,nbr,nbr
@@ -1156,7 +1156,7 @@ msh,
 		}
 	],
 	"title": "Caustic Cauchemar",
-	"touch_controls": 1,
+	"touch_controls": true,
 	"vars": {
 	},
 	"version": "1.4",
@@ -1164,12 +1164,12 @@ msh,
 		"area": [
 			{
 				"color": [0.274509,0.0,0.274509,0.196078],
-				"object": "@eval deserialize('1CFD2038')",
+				"object": "@eval deserialize('9630327f49454f2c8e439284351f54fb')",
 				"rect": [752,-992,1840,-704]
 			},
 			{
 				"color": [0.274509,0.0,0.274509,0.196078],
-				"object": "@eval deserialize('1CFCF120')",
+				"object": "@eval deserialize('fdc4459296a54245b944e144dd9c60a8')",
 				"rect": [-592,224,-256,416]
 			}
 		],
