--- a/data/level/Forest/ignominous-interlude.cfg
+++ b/data/level/Forest/ignominous-interlude.cfg
@@ -854,7 +854,7 @@
 	"next_level": "corrosive-climb.cfg",
 	"palettes": ["forest_dread"],
 	"preloads": "",
-	"previous_level": "wearisome-wetlands.cfg",
+	"previous_level": "mushroom-boss.cfg",
 	"segment_height": 0,
 	"segment_width": 0,
 	"serialized_objects": {
