--- a/data/level/Forest/the-empty-place.cfg
+++ b/data/level/Forest/the-empty-place.cfg
@@ -6,46 +6,46 @@
 	"background_palette": "forest_dread",
 	"character": [
 		{
-			"_addr": "0x1063bda00",
+			"_uuid": "e4717589f0df41d3ad5cf31ed9de59f0",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_325eb32",
 			"type": "rock_background_cubic1",
 			"x": 451,
 			"y": 460
 		},
 		{
-			"_addr": "0x1063c7200",
+			"_uuid": "91506b7d947f431dad7f26cc1bff54b6",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_33b851f8",
 			"type": "rock_background_cubic2",
 			"x": 771,
 			"y": 428
 		},
 		{
-			"_addr": "0x1063c7a00",
+			"_uuid": "68d27795dcef40bbbf3c51b2752dfeef",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_26dedb13",
 			"type": "rock_background_cubic2",
 			"x": 99,
 			"y": 140
 		},
 		{
-			"_addr": "0x1063c8200",
+			"_uuid": "319090e6c47b423b92165e8b838502eb",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_39c71e7c",
 			"type": "rock_background_cubic3",
 			"x": -29,
 			"y": 140
 		},
 		{
-			"_addr": "0x1063c8a00",
+			"_uuid": "5e251b572a9546b58e64e12afe93d869",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_60527b50",
 			"type": "rock_background_cubic3",
 			"x": -317,
@@ -53,196 +53,196 @@
 			"zsub_order": 1
 		},
 		{
-			"_addr": "0x1063c9200",
+			"_uuid": "372da637d93f4d3097a83df40d1f0cdb",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_62d4da1b",
 			"type": "rock_background_cubic4",
 			"x": -189,
 			"y": 236
 		},
 		{
-			"_addr": "0x1063c9a00",
+			"_uuid": "6209c4c5dda140739c175280e066aebe",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_260c5233",
 			"type": "rock_background_cubic4",
 			"x": 931,
 			"y": 204
 		},
 		{
-			"_addr": "0x1063ca200",
+			"_uuid": "21d46c84471c4ad581b03140f818a087",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_63385b45",
 			"type": "rock_background_cubic4",
 			"x": 288,
 			"y": 416
 		},
 		{
-			"_addr": "0x1063caa00",
+			"_uuid": "68dd767da0ff4984867b5758a63a5d84",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_28c0248b",
 			"type": "rock_background_cubic2",
 			"x": -285,
 			"y": 268
 		},
 		{
-			"_addr": "0x1063cb200",
+			"_uuid": "8b1831080ecc4ae080502e663a51dbd0",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_75a4ca34",
 			"type": "rock_foreground_cubic1",
 			"x": -419,
 			"y": 468
 		},
 		{
-			"_addr": "0x1063cba00",
+			"_uuid": "5588ca94188f4d54a95c8b4782eef5ce",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_554fb40b",
 			"type": "rock_foreground_forest4",
 			"x": -96,
 			"y": 448
 		},
 		{
-			"_addr": "0x1063cc200",
+			"_uuid": "bec4dcc5d9d64a44bc07d8068e885c48",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_66eea08f",
 			"type": "rock_foreground_forest4",
 			"x": 912,
 			"y": 404
 		},
 		{
-			"_addr": "0x1063cca00",
+			"_uuid": "f115dbef6a0446078478614b34723655",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_21db26a6",
 			"type": "rock_foreground_forest3",
 			"x": 656,
 			"y": 468
 		},
 		{
-			"_addr": "0x1063cd200",
+			"_uuid": "ad54269896dd49c8abd33232c731860d",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_79e6c114",
 			"type": "rock_foreground_forest3",
 			"x": 196,
 			"y": 468
 		},
 		{
-			"_addr": "0x1063cda00",
+			"_uuid": "6f8b74ae888a4c5c80518047ae2b6620",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_4704a951",
 			"type": "rock_foreground_forest2",
-			"upside_down": 1,
+			"upside_down": true,
 			"x": 960,
 			"y": 0
 		},
 		{
-			"_addr": "0x1063ce200",
+			"_uuid": "d1f4106ca8694753b09988a9efa18907",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_4072d531",
 			"type": "rock_foreground_forest2",
-			"upside_down": 1,
+			"upside_down": true,
 			"x": -561,
 			"y": -136
 		},
 		{
-			"_addr": "0x1063cea00",
+			"_uuid": "6d0d3ac1d3f3469aaafc68ba73778b88",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_28179cbf",
 			"type": "rock_foreground_forest2",
 			"x": -617,
 			"y": 421
 		},
 		{
-			"_addr": "0x106344a00",
+			"_uuid": "cfdeac8b5bd8464b9e18dc216f3c5bb5",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_398e",
 			"type": "fungus_bracket_springy",
 			"x": 1696,
 			"y": 0
 		},
 		{
-			"_addr": "0x106345200",
+			"_uuid": "d9695a4bac76422fb1a6e2441235c01e",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_437c",
 			"type": "fungus_bracket_springy",
 			"x": 1952,
 			"y": 320
 		},
 		{
-			"_addr": "0x106345a00",
+			"_uuid": "4f0932b32d63450fad2cc68ecd8ac20f",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_55d5",
 			"type": "rock_foreground_forest1",
 			"x": 1888,
 			"y": 416
 		},
 		{
-			"_addr": "0x106346200",
+			"_uuid": "c8236c2451cf4e7797c24aabebce1fa7",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_928",
 			"type": "rock_background_cubic1",
 			"x": 1858,
 			"y": 251
 		},
 		{
-			"_addr": "0x106346a00",
+			"_uuid": "c5cf3b72bd704ad9bdf99ae853fcf6f3",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_4946",
 			"type": "rock_background_cubic3",
 			"x": 1378,
 			"y": 251
 		},
 		{
-			"_addr": "0x106347200",
+			"_uuid": "26a4cabe61074a148aa2f8e2207b1e01",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_7062",
 			"type": "rock_background_cubic4",
 			"x": 1070,
 			"y": 260
 		},
 		{
-			"_addr": "0x106347a00",
+			"_uuid": "4266ff145a2a48579a156477c073acac",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_76d5",
 			"type": "fungus_bracket_springy",
 			"x": 2400,
 			"y": 0
 		},
 		{
-			"_addr": "0x106348200",
+			"_uuid": "d74f5064d0404911b5164af31a09546f",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_462b",
 			"type": "fungus_bracket_springy",
 			"x": 2496,
 			"y": 320
 		},
 		{
-			"_addr": "0x106348a00",
+			"_uuid": "5e0eca7c5d264a3ea96954122bde4810",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_2c0b",
 			"particles": "bubbles,fizz",
 			"property_data": {
@@ -256,9 +256,9 @@
 			"y": 960
 		},
 		{
-			"_addr": "0x106349800",
+			"_uuid": "194cdf4c64dd4803ae63fb42da3edd46",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_5467",
 			"particles": "bubbles,fizz",
 			"property_data": {
@@ -272,20 +272,20 @@
 			"y": 672
 		},
 		{
-			"_addr": "0x10634a600",
+			"_uuid": "b8855bf157154231ae691eab7414c40d",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_4f95",
 			"type": "rock_background_cubic2",
 			"x": 3264,
 			"y": 512
 		},
 		{
-			"_addr": "0x10634ae00",
+			"_uuid": "36c1dd5f03cd469da4a538cf70be33c8",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_6055",
 			"type": "rock_background_cubic1",
 			"x": 2762,
@@ -293,30 +293,30 @@
 			"zsub_order": 1
 		},
 		{
-			"_addr": "0x10634b600",
+			"_uuid": "f99a7153d7384c1aa5473496b2deccc6",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_7a7",
 			"type": "rock_background_cubic3",
 			"x": 3146,
 			"y": 470
 		},
 		{
-			"_addr": "0x10634be00",
+			"_uuid": "8a8850f921c649699849abbcf6283a51",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_78b4",
 			"type": "rock_background_cubic2",
 			"x": 2689,
 			"y": 279
 		},
 		{
-			"_addr": "0x10634c600",
+			"_uuid": "1995e54c152d4df5af12bf7e5b5bb86e",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_219d",
 			"property_data": {
 				"_x2_bound": 4256,
@@ -327,15 +327,15 @@
 				"current_vel_y": 0
 			},
 			"type": "current_generator",
-			"upside_down": 1,
+			"upside_down": true,
 			"x": 3744,
 			"y": 960
 		},
 		{
-			"_addr": "0x10634ce00",
+			"_uuid": "f60eb7126bbc46c783e684c1a4df8e8d",
 			"current_frame": "normal",
-			"custom": 1,
-			"is_human": 1,
+			"custom": true,
+			"is_human": true,
 			"label": "_1d5b",
 			"objects_destroyed": {
 				"level": "the-empty-place.cfg",
@@ -346,9 +346,9 @@
 			"y": 416
 		},
 		{
-			"_addr": "0x106353e00",
+			"_uuid": "01b3ecda2df64a5baeeb27cfe798c7de",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_320",
 			"property_data": {
 				"_x2_bound": 336,
@@ -361,71 +361,71 @@
 			"y": 426
 		},
 		{
-			"_addr": "0x106354600",
+			"_uuid": "f33e044bf3f949a0a68e20ae949b01be",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_2324",
 			"type": "mushroom_foreground3",
 			"x": 3708,
 			"y": 615
 		},
 		{
-			"_addr": "0x106354e00",
+			"_uuid": "0477f857609049d696d897b0edd3740c",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_2874",
 			"type": "mushroom_foreground1",
 			"x": 3380,
 			"y": 587
 		},
 		{
-			"_addr": "0x106355600",
+			"_uuid": "937d1edbfa7f44eb9bc52da6a6f25a21",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_5e77",
 			"type": "mushroom_foreground1",
 			"x": 2656,
 			"y": 512
 		},
 		{
-			"_addr": "0x106355e00",
+			"_uuid": "4d190c405cdb46ff8a8dca4605e0859e",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_41e5",
 			"type": "mushroom_foreground2",
 			"x": 3020,
 			"y": 412
 		},
 		{
-			"_addr": "0x106356600",
+			"_uuid": "71bda8a7176a42229673073311819206",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_4238",
 			"type": "mushroom_foreground3",
 			"x": 1494,
 			"y": 338
 		},
 		{
-			"_addr": "0x106356e00",
+			"_uuid": "11f762d127694bb68c45c40f72b64299",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_6ef2",
 			"type": "mushroom_foreground1",
 			"x": 1238,
 			"y": 434
 		},
 		{
-			"_addr": "0x106dc5200",
+			"_uuid": "ae9e72be6c5d4b4283973ddbfa193f31",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "caustic_cauchemar_door",
-			"type": "forest_cave_side_doorway",
 			"property_data": {
 				"_dest_door": "the_empty_place_door",
 				"_dest_level": "caustic-cauchemar.cfg"
 			},
+			"type": "forest_cave_side_doorway",
 			"x": -832,
 			"y": 320
 		}
@@ -441,11 +441,11 @@
 	"serialized_objects": {
 		"character": [
 			{
-				"_addr": "0x1063bbe00",
+				"_uuid": "44015e13b49d4d70a41ec92fa89713d8",
 				"activation_area": [2286,444,2609,895],
-				"created": 1,
+				"created": true,
 				"current_frame": "normal",
-				"custom": 1,
+				"custom": true,
 				"label": "_5467",
 				"particles": "bubbles,fizz",
 				"property_data": {
@@ -459,11 +459,11 @@
 				"y": 672
 			},
 			{
-				"_addr": "0x1063bcc00",
+				"_uuid": "816e7decc31a4726baf50c6403f33828",
 				"activation_area": [2302,716,4305,1215],
-				"created": 1,
+				"created": true,
 				"current_frame": "normal",
-				"custom": 1,
+				"custom": true,
 				"label": "_2c0b",
 				"particles": "bubbles,fizz",
 				"property_data": {
@@ -478,18 +478,8 @@
 			}
 		]
 	},
-	"set_screen_resolution_on_entry": 0,
+	"set_screen_resolution_on_entry": false,
 	"tile_map": [
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "background_parallax_objects"
-		},
 		{
 			"tiles": ",,,,,,nbr,nbr,nbr,nbr
 ,,,,,,nbr,nbr,nbr,nbr
@@ -548,16 +538,6 @@ nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,nbr,,,,,nbr,nbr,nbr,nbr,nbr,
 			"y": -352,
 			"y_speed": 100,
 			"zorder": "exterior_background_tiles"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "liquid_particle_effects"
 		},
 		{
 			"tiles": ",
@@ -675,26 +655,6 @@ frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "mushrooms_background"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "exterior_decor"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
 			"zorder": "player"
 		},
 		{
@@ -799,30 +759,10 @@ msh,msh,,,,,,,,,,,,msh,msh,msh
 			"y": -160,
 			"y_speed": 100,
 			"zorder": "mushrooms_foreground"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "foreground_parallax_objects"
-		},
-		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "in_front_of_everything"
 		}
 	],
 	"title": "",
-	"touch_controls": 1,
+	"touch_controls": true,
 	"vars": {
 	},
 	"version": "1.4",
@@ -830,12 +770,12 @@ msh,msh,,,,,,,,,,,,msh,msh,msh
 		"area": [
 			{
 				"color": [0.274509,0.0,0.274509,0.196078],
-				"object": "@eval deserialize('0x1063bbe00')",
+				"object": "@eval deserialize('44015e13b49d4d70a41ec92fa89713d8')",
 				"rect": [2336,544,2560,896]
 			},
 			{
 				"color": [0.274509,0.0,0.274509,0.196078],
-				"object": "@eval deserialize('0x1063bcc00')",
+				"object": "@eval deserialize('816e7decc31a4726baf50c6403f33828')",
 				"rect": [2352,816,4256,1216]
 			}
 		],
