--- a/data/objects/enemies/bosses/mushroom_boss.cfg
+++ b/data/objects/enemies/bosses/mushroom_boss.cfg
@@ -283,6 +283,7 @@ properties: {
 		])",
 		
 		on_postfight_outro: "[
+			set(me.is_a_boss, false),  //manually get rid of the boss hp bar early, since the heads, being cached in local storage, will still be alive.
 			set(_mook_spawner.spawning_active, false),
 			schedule(500, [
 				set(hitpoints,1),
